--- a/menuitemlistingyaml.yml
+++ b/menuitemlistingyaml.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: MenuItemListing
-        image: MenuItemListing:latest
+        image: menuitemlisting.azurecr.io/menuitemlistrepo:latest
         ports:
         - containerPort: 8080
       imagePullSecrets:
