--- a/MenuItemListing.csproj
+++ b/MenuItemListing.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="menuitemlistingyaml.yml">
+    <None Update="menuitemlistingdeploymentyaml.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
